--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "nano": "^6.1.5"
   }
 }
