--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Personal Health Record middleware for Patient which is capable of install/remove applications.",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,22 @@
   },
   "homepage": "https://github.com/softbrew/phr-core#readme",
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-webpack": "^1.5.0",
+    "jshint": "^2.8.0"
   },
   "dependencies": {
     "debug": "^2.2.0",
     "express": "^4.13.3",
-    "express-session": "^1.12.1",
     "nano": "^6.1.5"
   }
 }
