--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webpack": "^1.5.0",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "source-map-support": "^0.3.3"
   },
   "dependencies": {
     "debug": "^2.2.0",
