--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webpack": "^1.5.0",
-    "jshint": "^2.8.0",
-    "source-map-support": "^0.3.3"
+    "jshint": "^2.8.0"
   },
   "dependencies": {
     "debug": "^2.2.0",
     "express": "^4.13.3",
-    "nano": "^6.1.5"
+    "express-session": "^1.12.1",
+    "nano": "^6.1.5",
+    "source-map-support": "^0.3.3"
   }
 }
