--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "jshint": "^2.8.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
-    "express-session": "^1.12.1",
+    "express-jwt": "^3.3.0",
+    "jsonwebtoken": "^5.4.1",
     "nano": "^6.1.5",
     "source-map-support": "^0.3.3"
   }
