--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal Health Record middleware for Patient which is capable of install/remove applications.",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/server.js",
     "test": "npm test",
     "gulp": "gulp"
   },
@@ -37,6 +38,7 @@
     "jshint": "^2.8.0"
   },
   "dependencies": {
+    "axios": "^0.8.0",
     "body-parser": "^1.14.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
